# heuristic

./: .gitignore  Continual-Learning-Without-Retraining.md  Demo-Scenario.md  Makefile  README.md  When-Rules-Beat-Retraining.md  _config.yml  pyproject.toml
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: reflector.md
.github/workflows/: test.yml
data/: SPLITS.md  build_splits.py
data/injectors/: README.md  __init__.py  _common.py  inject.py  new_bin_attack.py  session_replay.py  synthetic_id_ring.py
data/injectors/tests/: test_injectors.py
data/reflect/: build_fixture.py
data/replay/: build_fixture.py  fixture.jsonl
results/: replay_report.json  replay_report.md  simulate.py
results/tests/: test_simulate.py
runs/: SCHEMA.md
skills/analyst-ui/: SKILL.md  app.py  labeling_queue.py  labels_io.py  pr_review.py
skills/analyst-ui/tests/: test_labeling_queue.py  test_labels_io.py  test_pr_review.py  test_queue.py
skills/common/: schemas.py
skills/common/tests/: test_schemas.py
skills/fraud-ml/: BASELINE.md  SKILL.md  features.py  fraud_ml.py  model.joblib  train.py
skills/fraud-ml/tests/: test_fraud_ml.py
skills/fraud-reflector/: SKILL.md  clustering.py  clusters.py  cost.py  eval.py  guards.py  guards.yaml  materialize.py  pr_template.py  reflector.py  rejections.py  tool_schema.py
skills/fraud-reflector/eval_clusters/: README.md  adversarial_single_customer.json  (+4 more)
skills/fraud-replay/: SKILL.md  floors.yaml  metrics.py  replay.py
skills/fraud-rules/: SKILL.md  registry.py
skills/orchestrator/: SKILL.md  orchestrator.py
(+28 files in other folders)
